HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeDiagnostics/Expected.uv
//! Expected diagnostic metadata for the FfiSafeDiagnostics rejected-source specimen.

expectedDiagnostic("E-TYP-2623", "diagnostics.23.FfiSafeDiagnostics")
